crates/ortho-router/tests/snapshots/snapshot_tests__nested_obstacles.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="300" height="210" viewBox="0 20 300 210">
  <rect x="0" y="20" width="300" height="210" fill="white"/>
  <g id="obstacles">
    <rect x="50" y="50" width="200" height="30" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="outer_top"/>
    <rect x="50" y="170" width="200" height="30" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="outer_bottom"/>
    <rect x="120" y="100" width="60" height="50" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="inner"/>
  </g>
  <g id="routes">
    <path d="M 25.4 127 L 76.19999999999999 127 L 76.19999999999999 88.89999999999999 L 228.6 88.89999999999999 L 228.6 127 L 266.7 127" fill="none" stroke="#d94a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="30" cy="125" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="30" y1="125" x2="40" y2="125" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="270" cy="125" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p2"/>
    <line x1="270" y1="125" x2="260" y2="125" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
