crates/ortho-router/tests/snapshots/snapshot_tests__port_with_all_visibility.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="140" viewBox="70 50 120 140">
  <rect x="70" y="50" width="120" height="140" fill="white"/>
  <g id="obstacles">
    <rect x="100" y="100" width="60" height="60" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
  </g>
  <g id="ports">
    <circle cx="130" cy="80" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="130" y1="80" x2="130" y2="70" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <line x1="130" y1="80" x2="130" y2="90" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <line x1="130" y1="80" x2="120" y2="80" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <line x1="130" y1="80" x2="140" y2="80" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
