crates/ortho-router/tests/snapshots/snapshot_tests__power_ground_separation.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="280" height="160" viewBox="0 20 280 160">
  <rect x="0" y="20" width="280" height="160" fill="white"/>
  <g id="obstacles">
    <rect x="100" y="60" width="80" height="80" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="ic"/>
  </g>
  <g id="routes">
    <path d="M 25.4 152.39999999999998 L 139.7 152.39999999999998 L 139.7 139.7" fill="none" stroke="#3498db" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="gnd_conn"/>
    <path d="M 254 101.6 L 177.79999999999998 101.6" fill="none" stroke="#2ecc71" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="sig_conn"/>
    <path d="M 25.4 50.8 L 139.7 50.8 L 139.7 63.5" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="vcc_conn"/>
  </g>
  <g id="ports">
    <circle cx="30" cy="50" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="vcc_supply"/>
    <line x1="30" y1="50" x2="40" y2="50" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="140" cy="60" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="ic_vcc"/>
    <line x1="140" y1="60" x2="140" y2="50" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="30" cy="150" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="gnd_supply"/>
    <line x1="30" y1="150" x2="40" y2="150" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="140" cy="140" r="4" fill="#3498db" stroke="#246a99" stroke-width="1" data-id="ic_gnd"/>
    <line x1="140" y1="140" x2="140" y2="150" stroke="#246a99" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="250" cy="100" r="4" fill="#2ecc71" stroke="#208e4f" stroke-width="1" data-id="signal_in"/>
    <line x1="250" y1="100" x2="240" y2="100" stroke="#208e4f" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="180" cy="100" r="4" fill="#2ecc71" stroke="#208e4f" stroke-width="1" data-id="ic_sig"/>
    <line x1="180" y1="100" x2="190" y2="100" stroke="#208e4f" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
