crates/ortho-router/tests/snapshots/snapshot_tests__same_net_connectors.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="280" height="100" viewBox="0 50 280 100">
  <rect x="0" y="50" width="280" height="100" fill="white"/>
  <g id="obstacles">
  </g>
  <g id="routes">
    <path d="M 25.4 76.19999999999999 L 254 76.19999999999999" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
    <path d="M 25.4 114.3 L 254 114.3" fill="none" stroke="#e74c3c" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c2"/>
  </g>
  <g id="ports">
    <circle cx="30" cy="80" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p1"/>
    <line x1="30" y1="80" x2="40" y2="80" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="30" cy="120" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p2"/>
    <line x1="30" y1="120" x2="40" y2="120" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="250" cy="80" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p3"/>
    <line x1="250" y1="80" x2="240" y2="80" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="250" cy="120" r="4" fill="#e74c3c" stroke="#a1352a" stroke-width="1" data-id="p4"/>
    <line x1="250" y1="120" x2="240" y2="120" stroke="#a1352a" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
