crates/ortho-router/tests/snapshots/snapshot_tests__simple_obstacle_avoidance.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="240" height="120" viewBox="20 50 240 120">
  <rect x="20" y="50" width="240" height="120" fill="white"/>
  <g id="obstacles">
    <rect x="100" y="80" width="80" height="60" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
  </g>
  <g id="routes">
    <path d="M 50.8 101.6 L 76.19999999999999 101.6 L 76.19999999999999 76.19999999999999 L 203.2 76.19999999999999 L 203.2 101.6 L 228.6 101.6" fill="none" stroke="#d94a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="50" cy="100" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="50" y1="100" x2="60" y2="100" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="230" cy="100" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p2"/>
    <line x1="230" y1="100" x2="220" y2="100" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
