crates/ortho-router/tests/snapshots/snapshot_tests__single_obstacle.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="160" height="140" viewBox="20 20 160 140">
  <rect x="20" y="20" width="160" height="140" fill="white"/>
  <g id="obstacles">
    <rect x="50" y="50" width="100" height="80" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
  </g>
  <g id="ports">
  </g>
</svg>
