crates/ortho-router/tests/snapshots/snapshot_tests__single_port.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="160" height="140" viewBox="20 20 160 140">
  <rect x="20" y="20" width="160" height="140" fill="white"/>
  <g id="obstacles">
    <rect x="50" y="50" width="100" height="80" fill="#e0e0e0" stroke="#333333" stroke-width="1" data-id="obs1"/>
  </g>
  <g id="ports">
    <circle cx="100" cy="50" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="100" y1="50" x2="100" y2="40" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
