crates/ortho-router/tests/snapshots/snapshot_tests__two_ports_vertical.snap
---
source: projects/editor/crates/ortho-router/tests/snapshot_tests.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="60" height="210" viewBox="70 20 60 210">
  <rect x="70" y="20" width="60" height="210" fill="white"/>
  <g id="obstacles">
  </g>
  <g id="routes">
    <path d="M 101.6 50.8 L 101.6 203.2" fill="none" stroke="#d94a4a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-id="c1"/>
  </g>
  <g id="ports">
    <circle cx="100" cy="50" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p1"/>
    <line x1="100" y1="50" x2="100" y2="60" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
    <circle cx="100" cy="200" r="4" fill="#4a90d9" stroke="#2d5a87" stroke-width="1" data-id="p2"/>
    <line x1="100" y1="200" x2="100" y2="190" stroke="#2d5a87" stroke-width="1.5" stroke-linecap="round"/>
  </g>
</svg>
